[tool.poetry]
name = "habitat-fydp-package"
version = "0.0.1"
description = "\u001b"
authors = ["Shanthosh Pushparajah <spushpar@uwaterloo.com>"]

[tool.poetry.dependencies]
python = "3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
